# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
-import { Router, type IRouter } from "express";
+import { Router } from "express";
 import healthRouter from "./health";
+import contactsRouter from "./contacts";
+import personalRouter from "./personal";
 
-const router: IRouter = Router();
+const router = Router();
 
-router.use(healthRouter);
+router.use("/health", healthRouter);
+router.use("/contacts", contactsRouter);
+router.use("/personal", personalRouter);
 
 export default router;
